@@ -168,7 +168,7 @@ CdbCache::readCategory(Category &cat) throw(ExBasic)
 			pkg->desc     = mapping["DESCRIPTION"];
 			pkg->homepage = mapping["HOMEPAGE"];
 			pkg->licenses = mapping["LICENSE"];
-			pkg->provide  = mapping["PROVIDE"];
+			pkg->set_provide(mapping["PROVIDE"]);
 		}
 
 		/* Read stability */
