@@ -73,5 +73,5 @@ assign_read_file(const char *filename, Package *pkg, BasicCache::ErrorCallback e
 	pkg->homepage = cf["HOMEPAGE"];
 	pkg->licenses = cf["LICENSE"];
 	pkg->desc     = cf["DESCRIPTION"];
-	pkg->provide  = cf["PROVIDE"];
+	pkg->set_provide(cf["PROVIDE"]);
 }
