@@ -4,6 +4,8 @@
 	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
 	- Support alternative /etc/portage/make.profile location, see
 	  http://bugs.gentoo.org/show_bug.cgi?id=358647
+	- Treat provide as a list of strings, see
+	  http://bugs.gentoo.org/show_bug.cgi?id=358729
 	- Use -fno-common
 
 *eix-0.22.8
